<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityUserProfile">

    <TextView
        android:id="@+id/UserNameDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="Username"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/EditContactInfoButton"
        android:layout_width="88dp"
        android:layout_height="37dp"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/squarebuttonshape"
        android:onClick="toUpdateContactInfo"
        android:text="Edit Contact Info"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/UserNameDisplay"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="88dp"
        android:layout_height="37dp"
        android:layout_marginEnd="1dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/squarebuttonshape"
        android:onClick="endActivity"
        android:text="Back"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toStartOf="@+id/UserNameDisplay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UserNameDisplay">

        <TextView
            android:id="@+id/edit_contact_info_email_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/email_address"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/edit_contact_info_email_view"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginEnd="13dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/textviewborder"
            android:padding="10dp"
            android:text="Placeholder" />

        <TextView
            android:id="@+id/edit_contact_info_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/phone_number"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/edit_contact_info_number_view"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginEnd="13dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/textviewborder"
            android:padding="10dp"
            android:text="Placeholder" />

    </LinearLayout>

    <ImageView
        android:id="@+id/QrCodeImageView"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <TextView
        android:id="@+id/ViewProfileQRCodeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="24dp"
        android:text="Profile QR Code: "
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/QrCodeImageView"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>